--- a/.github/workflows/v2ray.yml
+++ b/.github/workflows/v2ray.yml
@@ -32,4 +32,4 @@ jobs:
         uses: ./.github/actions/v2ray/push
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          accesstoken: ${{ secrets.DOCKER_ACCESSTOKEN }}
