解决 mirai 乱码问题

--- a/mirai/Dockerfile
+++ b/mirai/Dockerfile
@@ -9,4 +9,4 @@ RUN set -ex && \
     wget -P plugins https://github.com/mamoe/mirai-api-http/releases/download/v1.5.0/mirai-api-http-v1.5.0.jar && \
     wget -P plugins https://github.com/ryoii/mirai-console-addition/releases/download/v0.2.3/mirai-console-addition-V0.2.3.jar
 
-CMD ["java", "-jar", "mirai-console-wrapper-0.2.0-all.jar"]
+CMD ["java", "-Dfile.encoding=UTF-8", "-jar", "mirai-console-wrapper-0.2.0-all.jar"]
