mirai 更新 mirai-console-wrapper 到 1.2.0

--- a/mirai/Dockerfile
+++ b/mirai/Dockerfile
@@ -7,7 +7,7 @@ COPY ./mirai.sh .
 RUN set -ex && \
     apk --no-cache add ca-certificates curl && \
     mkdir plugins && \
-    wget -O mirai-console-wrapper.jar https://github.com/mamoe/mirai-console/releases/download/wrapper-1.1.0/mirai-console-wrapper-1.1.0.jar && \
+    wget -O mirai-console-wrapper.jar https://github.com/mamoe/mirai-console-wrapper/releases/download/1.2.0/mirai-console-wrapper-1.2.0-all.jar && \
     wget -P plugins https://github.com/mamoe/mirai-api-http/releases/download/v1.6.5/mirai-api-http-v1.6.5.jar && \
     chmod 755 mirai.sh
 
