添加 actions 触发条件

--- a/.github/workflows/v2ray.yml
+++ b/.github/workflows/v2ray.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - 'v2ray/version.json'
+      - '.github/workflows/v2ray.yml'
+      - '.github/actions/v2ray/**'
 
 jobs:
   build_and_push:
