--- a/.github/workflows/v2ray.yml
+++ b/.github/workflows/v2ray.yml
@@ -11,6 +11,7 @@ jobs:
   build_and_push:
     name: Build and Push
     runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/master' }}
     steps:
       - id: checkout
         name: Checkout
