--- a/xray/Dockerfile
+++ b/xray/Dockerfile
@@ -19,8 +19,7 @@ COPY config.json /etc/xray/config.json
 RUN set -ex && \
     apk --no-cache add ca-certificates && \
     mkdir /var/log/xray/ && \
-    chmod +x /usr/local/bin/xray/xray && \
-    /usr/local/bin/xray/xray version
+    chmod +x /usr/local/bin/xray/xray
 
 ENV PATH /usr/local/bin/xray:$PATH
 
